objects/relax__Job__c.object
<CustomObject>
    <description>A batchable Job for Relax to asynchronously execute on a given schedule.</description>
    <fields>
        <fullName>relax__Apex_Class__c</fullName>
        <description>The name of the Apex Class that this Job will invoke. Must either implement Schedulable (for individually-scheduled Jobs) or relax.BatchableProcessStep (for aggregable Jobs, which Relax can run as part of an ordered sequence)</description>
        <label>Apex Class</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relax__AsyncApexJobId__c</fullName>
        <description>The Id of the AsyncApexJob, if any, which is currently executing for this Job.</description>
        <label>Current Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relax__CronTriggerId__c</fullName>
        <description>The Id of the CronTrigger Job, if any, currently executing this Job.</description>
        <label>Current Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relax__Cron_Schedule__c</fullName>
        <description>For Jobs that need to be Run Individually, a CRON schedule dictating when the Job should be run must be provided.</description>
        <inlineHelpText>For Jobs that need to be Run Individually, a CRON schedule dictating when the Job should be run must be provided.</inlineHelpText>
        <label>Cron Schedule</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relax__Delete_Job_After_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in conjunction with &quot;Only Run Once&quot;. If checked, this Job will be deleted after it is first run.</description>
        <inlineHelpText>Used in conjunction with &quot;Only Run Once&quot;. If checked, this Job will be deleted after it is first run.</inlineHelpText>
        <label>Delete Job After Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>relax__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only active Jobs will be considered by the Relax scheduler.</description>
        <inlineHelpText>Only active Jobs will be considered by the Relax scheduler.</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>relax__JobSchedulerId__c</fullName>
        <description>The Id of the currently-scheduled Relax Job Scheduler process</description>
        <inlineHelpText>The Id of the currently-scheduled Relax Job Scheduler process</inlineHelpText>
        <label>Job Scheduler Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relax__Last_Run__c</fullName>
        <description>The last time that this Job was run</description>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>relax__Next_Run__c</fullName>
        <description>The next time that this Job should be run.</description>
        <inlineHelpText>The next time that this Job should be run.</inlineHelpText>
        <label>Next Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>relax__Only_Run_Once__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, then this Job will only be run once, at which point it will be made in-active.</description>
        <inlineHelpText>If checked, then this Job will only be run once, at which point it will be made in-active.</inlineHelpText>
        <label>Only Run Once</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>relax__Order__c</fullName>
        <description>Used for sequencing piggybacked jobs</description>
        <inlineHelpText>If this Job runs at the same time as another, Order determines which Job will execute when.</inlineHelpText>
        <label>Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>relax__Parameters__c</fullName>
        <description>Additional run parameters to be sent in to this Job as a string (i.e. JSON)</description>
        <inlineHelpText>Additional parameters to be passed in to this Job&apos;s Apex Class as a string. Could be comma-separated record ids, JSON, XML, whatever you want to use within your class.</inlineHelpText>
        <label>Parameters (optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>relax__Run_Increment__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Run Increment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>relax__Run_Individually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, a dedicated Scheduled Apex Job will be allocated to this Job. Otherwise, Relax will attempt to piggyback this Job onto others.</description>
        <inlineHelpText>If true, a dedicated Scheduled Apex Job will be allocated to this Job. Otherwise, Relax will attempt to piggyback this Job onto others.</inlineHelpText>
        <label>Run Individually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>relax__Run_Units__c</fullName>
        <label>Run Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                    <default>true</default>
                    <label>Days</label>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>relax__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>relax__All_Jobs</fullName>
        <columns>NAME</columns>
        <columns>relax__Apex_Class__c</columns>
        <columns>relax__IsActive__c</columns>
        <columns>relax__Run_Individually__c</columns>
        <columns>relax__Order__c</columns>
        <columns>relax__Status__c</columns>
        <columns>relax__Last_Run__c</columns>
        <columns>relax__Next_Run__c</columns>
        <columns>relax__JobSchedulerId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Jobs</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>relax__Individual_Jobs_Require_CRON_Schedule</fullName>
        <active>true</active>
        <description>Any Job with Run Individually set to true must have a valid CRON Schedule specified.</description>
        <errorConditionFormula>AND(
relax__Run_Individually__c,
ISBLANK(relax__Cron_Schedule__c)
)</errorConditionFormula>
        <errorDisplayField>relax__Cron_Schedule__c</errorDisplayField>
        <errorMessage>A valid CRON Schedule must be specified for a Job to be run individually.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>relax__Next_Run_After_Last_Run</fullName>
        <active>true</active>
        <description>You cannot update Next Run to be before Last Run</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(relax__Last_Run__c)),
NOT(ISBLANK(relax__Next_Run__c)),
OR(ISCHANGED(relax__Next_Run__c),ISCHANGED(relax__Last_Run__c)),
relax__Next_Run__c &lt;= relax__Last_Run__c
)</errorConditionFormula>
        <errorMessage>Next Run must be after Last Run.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>relax__Only_Run_Once_Requirements</fullName>
        <active>true</active>
        <description>For a Job to be Active and only run once, it must have a non-null Next Run.</description>
        <errorConditionFormula>AND(
relax__IsActive__c,
relax__Only_Run_Once__c,
ISBLANK(relax__Next_Run__c)
)</errorConditionFormula>
        <errorDisplayField>relax__Next_Run__c</errorDisplayField>
        <errorMessage>For a Job to be Active and only set to run once, the job&apos;s Next Run time must be non-null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>relax__Run_Increment_Greater_or_Equal_to_1</fullName>
        <active>true</active>
        <description>Run Increment must be greater than or equal to 1</description>
        <errorConditionFormula>AND(
NOT(relax__Run_Individually__c),
OR(
ISBLANK(relax__Run_Increment__c),
relax__Run_Increment__c &lt; 1
)
)</errorConditionFormula>
        <errorDisplayField>relax__Run_Increment__c</errorDisplayField>
        <errorMessage>Run Increment must be at least 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>relax__Run_Increment_Required_for_Chainable_Job</fullName>
        <active>true</active>
        <description>For a Job to be chained, Run Increment and Run Units are required.</description>
        <errorConditionFormula>AND(
NOT(relax__Run_Individually__c),
NOT(relax__Only_Run_Once__c),
OR(ISBLANK(relax__Run_Increment__c),ISBLANK(TEXT(relax__Run_Units__c)))
)</errorConditionFormula>
        <errorMessage>For a Job to be chained (i.e. not run individually), a valid Run Increment and Run Units must be specified.</errorMessage>
    </validationRules>
</CustomObject>